--- a/src/Plan.css
+++ b/src/Plan.css
@@ -18,7 +18,7 @@
 .plan-resources {
     width: 10%;
     float: left;
-    padding-top: 5px;
+    padding-top: 7px;
 }
 
 .plan-resource {
@@ -26,11 +26,20 @@
     margin-top: 10px;
     text-align: right;
     padding-right: 5px;
+    width: 65%;
 }
 
 .add-resource-button {
     float: right;
     margin-top: 10px;
+}
+
+.remove-resource {
+    float: left;
+}
+
+.resource-form {
+    margin-bottom: 0px;
 }
 
 .plan-container {
