Add global stats

--- a/src/Plan.css
+++ b/src/Plan.css
@@ -68,6 +68,14 @@
     table-layout: fixed;
 }
 
+.overconsumed {
+    color: #e47200;
+}
+
+.underconsumed {
+    color: #3aeb34;
+}
+
 th {
     padding-left: 50px;
 }
